objects/vlocity_cmt__PaymentPlan__c.object
<CustomObject>
    <description>Payment plan for the account.</description>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <description>Account ID associated with the payment plan</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Plan</relationshipLabel>
        <relationshipName>PaymentPlan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AmountRemaining__c</fullName>
        <description>Amount remaining in the payment plan at a given point in time</description>
        <label>Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DeactivationDate__c</fullName>
        <description>Date the payment plan was deactivated.</description>
        <label>Deactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DeactivationReason__c</fullName>
        <description>Reason for deactivating a payment plan</description>
        <label>Deactivation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer default</fullName>
                </value>
                <value>
                    <fullName>Alternate arrangement</fullName>
                </value>
                <value>
                    <fullName>Paid in full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DownPaymentAmount__c</fullName>
        <description>Amount of the down payment required to establish the payment plan.</description>
        <label>Down Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndDate__c</fullName>
        <description>Date the payment plan ended or is scheduled to end.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InstallmentAmount__c</fullName>
        <description>Amount of each instalment within the payment plan.</description>
        <label>Installment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NumberOfInstallments__c</fullName>
        <description>Number of installments within the payment plan.</description>
        <label>Number of Installments</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpenAmount__c</fullName>
        <description>Amount remaining unpaid when the payment plan is deactivated.</description>
        <label>Open Amount at Deactivation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PaymentFrequency__c</fullName>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PaymentMethodId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the payment method to use when taking payments for this payment plan.</description>
        <label>Payment Method</label>
        <referenceTo>vlocity_cmt__PaymentMethod__c</referenceTo>
        <relationshipLabel>Payment Plans</relationshipLabel>
        <relationshipName>PaymentPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PaymentPlanAmount__c</fullName>
        <description>Total amount included in the payment plan.</description>
        <label>Payment Plan Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Reason__c</fullName>
        <description>Reason for establishing the payment plan.</description>
        <label>Payment Plan Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer cannot pay</fullName>
                </value>
                <value>
                    <fullName>Amount in dispute</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartDate__c</fullName>
        <description>Date the payment plan starts.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Debt Repayment</fullName>
                </value>
                <value>
                    <fullName>Budget Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Plan Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>